[package]
name = "wasm-buffer"
version = "0.1.0"
authors = ["Bruce A. MacNaughton <bmacnaughton@gmail.com>"]
edition = "2018"
description = "experiments accessing node buffers from wasm"
repository = "none"
license = "MIT"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.77"
js-sys = "0.3.54"
